makes it possible to actually override the container options - requires latest TomEE changes